[package]
name = "tain"
version = "0.4.0"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Request container"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/tain"
repository = "https://github.com/VladasZ/tain"

[dependencies]
dirs = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }
dotenvy = { workspace = true }
